vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: #
spec:
  type: #
  ports:
  - port: #
    targetPort: #
    nodePort: #
  selector:
    app: #
