ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: #
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: #
    http:
      paths:
      - path: /*
        backend:
          serviceName: #
          servicePort: #
  - host: #
    http:
      paths:
      - path: /*
        backend:
          serviceName: #
          servicePort: #
